--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
 streamlit
 langchain
-langchain-community
-langchain-core
 langchain-openai
-langchain-chroma
-chromadb
-openai
-pymupdf
+langchain-community
+langchain-pinecone
+pinecone-client
 pypdf
+pymupdf
 python-dotenv
-tiktoken
 fpdf2
 gTTS
