--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
 fastapi
 uvicorn
 python-dotenv
-pinecone-client
+pinecone
 langchain
 langchain-openai
 langchain-pinecone
 requests
 pymupdf
+pydantic>=2.0
+structlog
+cachetools
+jinja2
+openai
+streamlit
+fpdf2
+python-multipart
+semver
+python-docx
